- fixed chat attach bar line break issue on small screens

--- a/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
+++ b/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
@@ -1537,6 +1537,8 @@ img.emoji {
     font-size: 12px;
     text-align: center;
     font-weight: bold;
+    white-space: nowrap;
+    overflow: visible;
 }
 
 .spixi-friend-status-indicator {
